@@ -4,12 +4,14 @@ import java.time.DayOfWeek;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
+import java.time.temporal.TemporalAdjusters;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import com.bootcamp.yahoofinance.DTO.StockDTO;
 import com.bootcamp.yahoofinance.DTO.StockDTO.StockData;
+import com.bootcamp.yahoofinance.entity.StockPriceEntity;
 import com.bootcamp.yahoofinance.entity.StockPriceOHLCEntity;
 import com.bootcamp.yahoofinance.DTO.StockOHLCDTO;
 import com.bootcamp.yahoofinance.exception.BusinessException;
@@ -21,200 +23,257 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 
 @Service
 public class YahooServiceImpl implements YahooService {
-    @Autowired
-    private StockPriceRepository stockPriceRepository;
+        @Autowired
+        private StockPriceRepository stockPriceRepository;
 
-    @Autowired
-    private StockPriceOHLCRepository stockPriceOHLCRepository;
+        @Autowired
+        private StockPriceOHLCRepository stockPriceOHLCRepository;
 
-    @Autowired
-    private RedisManager redisManager;
+        @Autowired
+        private RedisManager redisManager;
 
-    @Override
-    public StockDTO getPrice(String stockCode) throws JsonProcessingException {
+        @Override
+        public StockDTO getPrice(String stockCode)
+                        throws JsonProcessingException {
 
-        String redisString = "5min" + stockCode;
+                // String redisString = "5min" + stockCode;
 
-        StockDTO redisData = this.redisManager.get(redisString, StockDTO.class);
+                // StockDTO redisData = this.redisManager.get(redisString,
+                //                 StockDTO.class);
 
-        if (redisData != null) {
-            StockDTO stockDTO = StockDTO.builder().symbol(redisData.getSymbol())
-                    .timeFrame("M5")
-                    .data(redisData.getData().stream()
-                            .filter(e -> e.getSymbol().equals(stockCode))
-                            .collect(Collectors.toList()))
-                    .build();
+                // if (redisData != null) {
+                //         StockDTO stockDTO = StockDTO.builder()
+                //                         .symbol(redisData.getSymbol())
+                //                         .timeFrame("M5")
+                //                         .data(redisData.getData().stream()
+                //                                         .filter(e -> e.getSymbol()
+                //                                                         .equals(stockCode))
+                //                                         .collect(Collectors
+                //                                                         .toList()))
+                //                         .build();
 
-            System.out.println("Get From Redis.....");
+                //         System.out.println("Get From Redis.....");
 
-            return stockDTO;
+                //         return stockDTO;
+                // }
+
+                LocalDate lastTradeDate = this.stockPriceRepository
+                                .findFirstBySymbolOrderByMarketDateTimeDesc(
+                                                stockCode)
+                                .orElseThrow(() -> new BusinessException())
+                                .getMarketDateTime().toLocalDate();
+
+                return StockDTO.builder().symbol(stockCode).timeFrame("M5")
+                                .data(this.stockPriceRepository
+                                                .findBySymbol(stockCode)
+                                                .stream()
+                                                .filter(e -> e.getMarketDateTime()
+                                                                .toLocalDate()
+                                                                .equals(lastTradeDate))
+                                                .map(e -> StockData.builder()
+                                                                .symbol(stockCode)
+                                                                .regularMarketTime(
+                                                                                e.getRegularMarketTime())
+                                                                .marketDateTime(e
+                                                                                .getMarketDateTime())
+                                                                .regularMarketPrice(
+                                                                                e.getRegularMarketPrice())
+                                                                .regularMarketChangePercent(
+                                                                                e.getRegularMarketChangePercent())
+                                                                .build())
+                                                .collect(Collectors.toList()))
+                                .build();
+
         }
 
-        LocalDate lastTradeDate = this.stockPriceRepository
-                .findFirstBySymbolOrderByMarketDateTimeDesc(stockCode)
-                .orElseThrow(() -> new BusinessException()).getMarketDateTime()
-                .toLocalDate();
+        @Override
+        public StockOHLCDTO getDayOHLC(String stockCode) {
+                Long fromTimeStamp = LocalDate.now().plusYears(-1)
+                                .atStartOfDay(ZoneId.systemDefault())
+                                .toInstant().getEpochSecond();
 
-        return StockDTO.builder().symbol(stockCode).timeFrame("M5")
-                .data(this.stockPriceRepository.findBySymbol(stockCode).stream()
-                        .filter(e -> e.getMarketDateTime().toLocalDate()
-                                .equals(lastTradeDate))
-                        .map(e -> StockData.builder().symbol(stockCode)
-                                .regularMarketTime(e.getRegularMarketTime())
-                                .marketDateTime(e.getMarketDateTime())
-                                .regularMarketPrice(e.getRegularMarketPrice())
-                                .regularMarketChangePercent(
-                                        e.getRegularMarketChangePercent())
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
+                List<StockPriceOHLCEntity> stockPriceOHLCEntities =
+                                this.stockPriceOHLCRepository
+                                                .findBySymbol(stockCode);
 
-    }
+                List<StockOHLCDTO.StockData> stockDataList =
+                                stockPriceOHLCEntities.stream() //
+                                                .filter(e -> e.getTimestamp() >= fromTimeStamp) //
+                                                .map(e -> StockOHLCDTO.StockData
+                                                                .builder() //
+                                                                .symbol(e.getSymbol()) //
+                                                                .timestamp(e.getTimestamp()) //
+                                                                .marketDate(e.getDate()) //
+                                                                .open(e.getOpen()) //
+                                                                .high(e.getHigh()) //
+                                                                .low(e.getLow()) //
+                                                                .close(e.getClose()) //
+                                                                .build() //
+                                                ).collect(Collectors.toList());
 
-    @Override
-    public StockOHLCDTO getDayOHLC(String stockCode) {
-        Long fromTimeStamp = LocalDate.now().plusYears(-1)
-                .atStartOfDay(ZoneId.systemDefault()).toInstant()
-                .getEpochSecond();
+                if (!stockDataList.get(stockDataList.size() - 1).getMarketDate()
+                                .equals(LocalDate.now())) {
 
-        List<StockPriceOHLCEntity> stockPriceOHLCEntities =
-                this.stockPriceOHLCRepository.findBySymbol(stockCode);
+                        Double open = stockPriceRepository.findAll().stream()
+                                        .filter(e -> e.getMarketDateTime()
+                                                        .toLocalDate()
+                                                        .equals(LocalDate.now())
+                                                        & e.getSymbol().equals(
+                                                                        stockCode)) //
+                                        .map(e -> e.getRegularMarketPrice())
+                                        .collect(Collectors.toList()).get(0);
 
-        List<StockOHLCDTO.StockData> stockDataList =
-                stockPriceOHLCEntities.stream() //
-                        .filter(e -> e.getTimestamp() >= fromTimeStamp) //
-                        .map(e -> StockOHLCDTO.StockData.builder() //
-                                .symbol(e.getSymbol()) //
-                                .timestamp(e.getTimestamp()) //
-                                .marketDate(e.getDate()) //
-                                .open(e.getOpen()) //
-                                .high(e.getHigh()) //
-                                .low(e.getLow()) //
-                                .close(e.getClose()) //
-                                .build() //
-                        ).collect(Collectors.toList());
+                        Double close = stockPriceRepository
+                                        .findFirstBySymbolOrderByMarketDateTimeDesc(
+                                                        stockCode)
+                                        .map(e -> e.getRegularMarketPrice())
+                                        .orElseThrow();
 
-        if (!stockDataList.get(stockDataList.size() - 1).getMarketDate()
-                .equals(LocalDate.now())) {
+                        Long timeStamp = stockPriceRepository
+                                        .findFirstBySymbolOrderByMarketDateTimeDesc(
+                                                        stockCode)
+                                        .map(e -> e.getRegularMarketTime())
+                                        .orElseThrow();
 
-            Double open = stockPriceRepository.findAll().stream()
-                    .filter(e -> e.getMarketDateTime().toLocalDate()
-                            .equals(LocalDate.now()) & e.getSymbol().equals(stockCode)) //
-                    .map(e -> e.getRegularMarketPrice())
-                    .collect(Collectors.toList()).get(0);
+                        Double high = stockPriceRepository.findAll().stream()
+                                        .filter(e -> e.getMarketDateTime()
+                                                        .toLocalDate()
+                                                        .equals(LocalDate.now())
+                                                        & e.getSymbol().equals(
+                                                                        stockCode)) //
+                                        .map(e -> e.getRegularMarketPrice())
+                                        .collect(Collectors.toList()).stream()
+                                        .max((a, b) -> a.compareTo(b))
+                                        .orElseThrow();
 
-            Double close = stockPriceRepository
-                    .findFirstBySymbolOrderByMarketDateTimeDesc(stockCode)
-                    .map(e -> e.getRegularMarketPrice()).orElseThrow();
+                        Double low = stockPriceRepository.findAll().stream()
+                                        .filter(e -> e.getMarketDateTime()
+                                                        .toLocalDate()
+                                                        .equals(LocalDate.now())
+                                                        & e.getSymbol().equals(
+                                                                        stockCode)) //
+                                        .map(e -> e.getRegularMarketPrice())
+                                        .collect(Collectors.toList()).stream()
+                                        .max((a, b) -> b.compareTo(a))
+                                        .orElseThrow();
 
-            Long timeStamp = stockPriceRepository
-                    .findFirstBySymbolOrderByMarketDateTimeDesc(stockCode)
-                    .map(e -> e.getRegularMarketTime()).orElseThrow();
+                        stockDataList.add(StockOHLCDTO.StockData.builder() //
+                                        .symbol(stockCode) //
+                                        .timestamp(timeStamp) //
+                                        .marketDate(LocalDate.ofInstant(Instant
+                                                        .ofEpochSecond(timeStamp),
+                                                        ZoneId.systemDefault()))
+                                        .open(open) //
+                                        .high(high) //
+                                        .low(low) //
+                                        .close(close) //
+                                        .build());
+                }
 
-            Double high = stockPriceRepository.findAll().stream()
-                    .filter(e -> e.getMarketDateTime().toLocalDate()
-                            .equals(LocalDate.now()) & e.getSymbol().equals(stockCode)) //
-                    .map(e -> e.getRegularMarketPrice())
-                    .collect(Collectors.toList()).stream()
-                    .max((a, b) -> a.compareTo(b)).orElseThrow();
-
-            Double low = stockPriceRepository.findAll().stream()
-                    .filter(e -> e.getMarketDateTime().toLocalDate()
-                            .equals(LocalDate.now()) & e.getSymbol().equals(stockCode)) //
-                    .map(e -> e.getRegularMarketPrice())
-                    .collect(Collectors.toList()).stream()
-                    .max((a, b) -> b.compareTo(a)).orElseThrow();
-
-            stockDataList.add(StockOHLCDTO.StockData.builder() //
-                    .symbol(stockCode) //
-                    .timestamp(timeStamp) //
-                    .marketDate(LocalDate
-                    .ofInstant(
-                            Instant.ofEpochSecond(
-                                    timeStamp),
-                            ZoneId.systemDefault()))
-                    .open(open) //
-                    .high(high) //
-                    .low(low) //
-                    .close(close) //
-                    .build()
-                    );
+                return StockOHLCDTO.builder().symbol(stockCode) //
+                                .timeFrame("D1").data(stockDataList).build();
         }
 
-        return StockOHLCDTO.builder().symbol(stockCode) //
-                .timeFrame("D1").data(stockDataList).build();
-    }
 
+        @Override
+        public StockOHLCDTO getWeekOHLC(String stockCode) {
 
-    @Override
-    public StockOHLCDTO getWeekOHLC(String stockCode) {
+                Long fromTimeStamp = LocalDate.now().plusYears(-1)
+                                .atStartOfDay(ZoneId.systemDefault())
+                                .toInstant().getEpochSecond();
 
-        Long fromTimeStamp = LocalDate.now().plusYears(-1)
-                .atStartOfDay(ZoneId.systemDefault()).toInstant()
-                .getEpochSecond();
+                List<StockPriceOHLCEntity> stockPriceOHLCEntities =
+                                this.stockPriceOHLCRepository
+                                                .findBySymbol(stockCode);
 
-        List<StockPriceOHLCEntity> stockPriceOHLCEntities =
-                this.stockPriceOHLCRepository.findBySymbol(stockCode);
+                List<StockOHLCDTO.StockData> stockDataList =
+                                stockPriceOHLCEntities.stream() //
+                                                .filter(e -> e.getTimestamp() >= fromTimeStamp
+                                                                & LocalDate.ofInstant(
+                                                                                Instant.ofEpochSecond(
+                                                                                                e.getTimestamp()),
+                                                                                ZoneId.systemDefault())
+                                                                                .getDayOfWeek() == DayOfWeek.FRIDAY) //
+                                                .map(e -> StockOHLCDTO.StockData
+                                                                .builder() //
+                                                                .symbol(e.getSymbol()) //
+                                                                .timestamp(e.getTimestamp()) //
+                                                                .marketDate(e.getDate()) //
+                                                                .open(e.getOpen()) //
+                                                                .high(e.getHigh()) //
+                                                                .low(e.getLow()) //
+                                                                .close(e.getClose()) //
+                                                                .build() //
+                                                ).collect(Collectors.toList());
 
-        List<StockOHLCDTO.StockData> stockDataList =
-                stockPriceOHLCEntities.stream() //
-                        .filter(e -> e.getTimestamp() >= fromTimeStamp
-                                & LocalDate
-                                        .ofInstant(
-                                                Instant.ofEpochSecond(
-                                                        e.getTimestamp()),
-                                                ZoneId.systemDefault())
-                                        .getDayOfWeek() == DayOfWeek.FRIDAY) //
-                        .map(e -> StockOHLCDTO.StockData.builder() //
-                                .symbol(e.getSymbol()) //
-                                .timestamp(e.getTimestamp()) //
-                                .marketDate(e.getDate()) //
-                                .open(e.getOpen()) //
-                                .high(e.getHigh()) //
-                                .low(e.getLow()) //
-                                .close(e.getClose()) //
-                                .build() //
-                        ).collect(Collectors.toList());
+                if (!stockDataList.get(stockDataList.size() - 1).getMarketDate()
+                                .equals(LocalDate.now())) {
 
-        return StockOHLCDTO.builder().symbol(stockCode) //
-                .timeFrame("W1").data(stockDataList).build();
-    }
+                        LocalDate mondayLocalDate = LocalDate.now()
+                        .with(TemporalAdjusters.previous(
+                                        DayOfWeek.MONDAY));
+                        Long mondayTimeStamp = mondayLocalDate.atStartOfDay(ZoneId.systemDefault())
+                        .toInstant().getEpochSecond();
 
-    @Override
-    public StockOHLCDTO getMonthOHLC(String stockCode) {
+                        List<StockPriceOHLCEntity> thisweek = this.stockPriceOHLCRepository.findBySymbol(stockCode).stream().filter(e -> e.getTimestamp() >= mondayTimeStamp).collect(Collectors.toList());
 
-        Long fromTimeStamp = LocalDate.now().plusYears(-2)
-                .atStartOfDay(ZoneId.systemDefault()).toInstant()
-                .getEpochSecond();
+                        Double open = thisweek.get(0).getOpen();
+                        Double high = thisweek.stream().map(e -> e.getHigh()).max((a, b) -> a.compareTo(b)).get();
+                        Double low = thisweek.stream().map(e -> e.getLow()).min((a, b) -> b.compareTo(a)).get();
+                        Double close = thisweek.get(thisweek.size()-1).getClose();
 
-        List<StockPriceOHLCEntity> stockPriceOHLCEntities =
-                this.stockPriceOHLCRepository.findBySymbol(stockCode);
+                        stockDataList.add(StockOHLCDTO.StockData
+                        .builder() //
+                        .symbol(stockCode) //
+                        .timestamp(thisweek.get(thisweek.size()-1).getTimestamp()) //
+                        .marketDate(thisweek.get(thisweek.size()-1).getDate()) //
+                        .open(open) //
+                        .high(high) //
+                        .low(low) //
+                        .close(close) //
+                        .build());
+                }
 
-        List<StockOHLCDTO.StockData> stockDataList = stockPriceOHLCEntities
-                .stream() //
-                .filter(e -> e.getTimestamp() >= fromTimeStamp
-                        & LocalDate
-                                .ofInstant(
-                                        Instant.ofEpochSecond(e.getTimestamp()),
-                                        ZoneId.systemDefault())
-                                .getDayOfMonth() == LocalDate
-                                        .ofInstant(
-                                                Instant.ofEpochSecond(
-                                                        e.getTimestamp()),
-                                                ZoneId.systemDefault())
-                                        .lengthOfMonth()) //
-                .map(e -> StockOHLCDTO.StockData.builder() //
-                        .symbol(e.getSymbol()) //
-                        .timestamp(e.getTimestamp()) //
-                        .marketDate(e.getDate()) //
-                        .open(e.getOpen()) //
-                        .high(e.getHigh()) //
-                        .low(e.getLow()) //
-                        .close(e.getClose()) //
-                        .build() //
-                ).collect(Collectors.toList());
+                return StockOHLCDTO.builder().symbol(stockCode) //
+                                .timeFrame("W1").data(stockDataList).build();
+        }
 
-        return StockOHLCDTO.builder().symbol(stockCode) //
-                .timeFrame("MN").data(stockDataList).build();
-    }
+        @Override
+        public StockOHLCDTO getMonthOHLC(String stockCode) {
+
+                Long fromTimeStamp = LocalDate.now().plusYears(-2)
+                                .atStartOfDay(ZoneId.systemDefault())
+                                .toInstant().getEpochSecond();
+
+                List<StockPriceOHLCEntity> stockPriceOHLCEntities =
+                                this.stockPriceOHLCRepository
+                                                .findBySymbol(stockCode);
+
+                List<StockOHLCDTO.StockData> stockDataList =
+                                stockPriceOHLCEntities.stream() //
+                                                .filter(e -> e.getTimestamp() >= fromTimeStamp
+                                                                & LocalDate.ofInstant(
+                                                                                Instant.ofEpochSecond(
+                                                                                                e.getTimestamp()),
+                                                                                ZoneId.systemDefault())
+                                                                                .getDayOfMonth() == LocalDate
+                                                                                                .ofInstant(Instant
+                                                                                                                .ofEpochSecond(e.getTimestamp()),
+                                                                                                                ZoneId.systemDefault())
+                                                                                                .lengthOfMonth()) //
+                                                .map(e -> StockOHLCDTO.StockData
+                                                                .builder() //
+                                                                .symbol(e.getSymbol()) //
+                                                                .timestamp(e.getTimestamp()) //
+                                                                .marketDate(e.getDate()) //
+                                                                .open(e.getOpen()) //
+                                                                .high(e.getHigh()) //
+                                                                .low(e.getLow()) //
+                                                                .close(e.getClose()) //
+                                                                .build() //
+                                                ).collect(Collectors.toList());
+
+                return StockOHLCDTO.builder().symbol(stockCode) //
+                                .timeFrame("MN").data(stockDataList).build();
+        }
 }
